test/resources/execution/failing/Array2.grading.amy
Object TestA1
val t: Int(32) = new Int(32)[10];
t[-1]

end TestA1